Introducido relación numpy y pytorch

--- a/PythonDataScience/Introducción a los tensores/02_operaciones_basicas.ipynb
+++ b/PythonDataScience/Introducción a los tensores/02_operaciones_basicas.ipynb
@@ -192,7 +192,23 @@
     "     gt_tensor = torch.gt(tensor_a, tensor_b)\n",
     "     print(gt_tensor)  # tensor([False, False, False])\n",
     "     ```\n",
-    "\n"
+    "\n",
+    "\n",
+    "## Relación de numpy y Pytorch\n",
+    "```python\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "\n",
+    "# Create a PyTorch tensor\n",
+    "pytorch_tensor = torch.tensor([1, 2, 3, 4, 5])\n",
+    "\n",
+    "# Convert to NumPy array\n",
+    "numpy_array = pytorch_tensor.numpy()\n",
+    "\n",
+    "print(\"PyTorch Tensor:\", pytorch_tensor)\n",
+    "print(\"NumPy Array:\", numpy_array)\n",
+    "print(\"Type:\", type(numpy_array)) \n",
+    "```"
    ]
   },
   {
