--- a/PythonDataScience/Introducción a los tensores/02_operaciones_basicas.ipynb
+++ b/PythonDataScience/Introducción a los tensores/02_operaciones_basicas.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3d101181-21e4-4c09-8029-fccb375dec29",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "base\n"
+      "rrnn\n"
      ]
     }
    ],
@@ -235,13 +235,100 @@
    "execution_count": null,
    "id": "99c54b1a-b3a2-4fce-8aa3-1fcb770d6b24",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 2, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "tensor = torch.tensor([1, 2, 3])\n",
+    "print(tensor)  # tensor([1, 2, 3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0f568937",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 3,  8, 17])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import random\n",
+    "RANDOM_SEED=42 # try changing this to different values and see what happens to the numbers below\n",
+    "torch.manual_seed(seed=RANDOM_SEED) \n",
+    "torch.randint(1, 21,(3,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "90e6d537",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "cbf3eaca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='mps', index=0)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if torch.cuda.is_available():\n",
+    "    device = \"cuda\" # Use NVIDIA GPU (if available)\n",
+    "elif torch.backends.mps.is_available():\n",
+    "    device = \"mps\" # Use Apple Silicon GPU (if available)\n",
+    "else:\n",
+    "    device = \"cpu\" # Default to CPU if no GPU is available\n",
+    "\n",
+    "tensor = torch.tensor([1, 2, 3],device=device)\n",
+    "tensor.device\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "rrnn",
    "language": "python",
    "name": "python3"
   },
@@ -255,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
