--- a/Sistemas_de_Big Data/Unidad4_NoSQL/mongodb/practicando_mongo.ipynb
+++ b/Sistemas_de_Big Data/Unidad4_NoSQL/mongodb/practicando_mongo.ipynb
@@ -251,10 +251,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "e8d6d74d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Conectado a la base de datos 'universidad'\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from pymongo import MongoClient\n",
@@ -300,7 +308,10 @@
     "        if self.client:\n",
     "            self.client.close()\n",
     "            print(\"Conexión cerrada\")\n",
-    "# Uso\n"
+    "# Uso\n",
+    "db_conn = DatabaseConnection(\"admin\",\"password123\")\n",
+    "db = db_conn.connect('universidad')\n",
+    "estudiantes = db.estudiantes"
    ]
   },
   {
@@ -380,6 +391,92 @@
     "db = db_conn.connect('universidad')\n",
     "estudiantes = db.estudiantes\n",
     "estudiantes.insert_one(documento_completo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e5ff287",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: El _id ya existe - E11000 duplicate key error collection: universidad.estudiantes index: _id_ dup key: { _id: \"EST001\" }, full error: {'index': 0, 'code': 11000, 'errmsg': 'E11000 duplicate key error collection: universidad.estudiantes index: _id_ dup key: { _id: \"EST001\" }', 'keyPattern': {'_id': 1}, 'keyValue': {'_id': 'EST001'}}\n"
+     ]
+    },
+    {
+     "ename": "BulkWriteError",
+     "evalue": "batch op errors occurred, full error: {'writeErrors': [{'index': 2, 'code': 11000, 'errmsg': 'E11000 duplicate key error collection: universidad.estudiantes index: _id_ dup key: { _id: 1 }', 'keyPattern': {'_id': 1}, 'keyValue': {'_id': 1}, 'op': {'_id': 1, 'nombre': 'Duplicado'}}], 'writeConcernErrors': [], 'nInserted': 3, 'nUpserted': 0, 'nMatched': 0, 'nModified': 0, 'nRemoved': 0, 'upserted': []}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mBulkWriteError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 20\u001b[39m\n\u001b[32m     11\u001b[39m documentos = [\n\u001b[32m     12\u001b[39m     {\u001b[33m\"\u001b[39m\u001b[33m_id\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m1\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mnombre\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mUsuario1\u001b[39m\u001b[33m\"\u001b[39m},\n\u001b[32m     13\u001b[39m     {\u001b[33m\"\u001b[39m\u001b[33m_id\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m2\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mnombre\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mUsuario2\u001b[39m\u001b[33m\"\u001b[39m},\n\u001b[32m     14\u001b[39m     {\u001b[33m\"\u001b[39m\u001b[33m_id\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m1\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mnombre\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mDuplicado\u001b[39m\u001b[33m\"\u001b[39m},  \u001b[38;5;66;03m# Este fallará\u001b[39;00m\n\u001b[32m     15\u001b[39m     {\u001b[33m\"\u001b[39m\u001b[33m_id\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m3\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mnombre\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mUsuario3\u001b[39m\u001b[33m\"\u001b[39m}\n\u001b[32m     16\u001b[39m ]\n\u001b[32m     18\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m     19\u001b[39m     \u001b[38;5;66;03m# ordered=False permite continuar después de un error\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m     resultado = \u001b[43mestudiantes\u001b[49m\u001b[43m.\u001b[49m\u001b[43minsert_many\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdocumentos\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mordered\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     21\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m DuplicateKeyError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m     22\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mAlgunos documentos no se insertaron: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/practica_mongo/lib/python3.12/site-packages/pymongo/_csot.py:125\u001b[39m, in \u001b[36mapply.<locals>.csot_wrapper\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m    123\u001b[39m         \u001b[38;5;28;01mwith\u001b[39;00m _TimeoutContext(timeout):\n\u001b[32m    124\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m func(\u001b[38;5;28mself\u001b[39m, *args, **kwargs)\n\u001b[32m--> \u001b[39m\u001b[32m125\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/practica_mongo/lib/python3.12/site-packages/pymongo/synchronous/collection.py:975\u001b[39m, in \u001b[36mCollection.insert_many\u001b[39m\u001b[34m(self, documents, ordered, bypass_document_validation, session, comment)\u001b[39m\n\u001b[32m    973\u001b[39m blk = _Bulk(\u001b[38;5;28mself\u001b[39m, ordered, bypass_document_validation, comment=comment)\n\u001b[32m    974\u001b[39m blk.ops = \u001b[38;5;28mlist\u001b[39m(gen())\n\u001b[32m--> \u001b[39m\u001b[32m975\u001b[39m \u001b[43mblk\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mwrite_concern\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msession\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_Op\u001b[49m\u001b[43m.\u001b[49m\u001b[43mINSERT\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    976\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m InsertManyResult(inserted_ids, write_concern.acknowledged)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/practica_mongo/lib/python3.12/site-packages/pymongo/synchronous/bulk.py:751\u001b[39m, in \u001b[36m_Bulk.execute\u001b[39m\u001b[34m(self, write_concern, session, operation)\u001b[39m\n\u001b[32m    749\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    750\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m751\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mexecute_command\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgenerator\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwrite_concern\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msession\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moperation\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/practica_mongo/lib/python3.12/site-packages/pymongo/synchronous/bulk.py:614\u001b[39m, in \u001b[36m_Bulk.execute_command\u001b[39m\u001b[34m(self, generator, write_concern, session, operation)\u001b[39m\n\u001b[32m    604\u001b[39m _ = client._retryable_write(\n\u001b[32m    605\u001b[39m     \u001b[38;5;28mself\u001b[39m.is_retryable,\n\u001b[32m    606\u001b[39m     retryable_bulk,\n\u001b[32m   (...)\u001b[39m\u001b[32m    610\u001b[39m     operation_id=op_id,\n\u001b[32m    611\u001b[39m )\n\u001b[32m    613\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m full_result[\u001b[33m\"\u001b[39m\u001b[33mwriteErrors\u001b[39m\u001b[33m\"\u001b[39m] \u001b[38;5;129;01mor\u001b[39;00m full_result[\u001b[33m\"\u001b[39m\u001b[33mwriteConcernErrors\u001b[39m\u001b[33m\"\u001b[39m]:\n\u001b[32m--> \u001b[39m\u001b[32m614\u001b[39m     \u001b[43m_raise_bulk_write_error\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfull_result\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    615\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m full_result\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/practica_mongo/lib/python3.12/site-packages/pymongo/bulk_shared.py:131\u001b[39m, in \u001b[36m_raise_bulk_write_error\u001b[39m\u001b[34m(full_result)\u001b[39m\n\u001b[32m    125\u001b[39m         errmsg = (\n\u001b[32m    126\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mThis MongoDB deployment does not support \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    127\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mretryable writes. Please add retryWrites=false \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    128\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mto your connection string.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    129\u001b[39m         )\n\u001b[32m    130\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m OperationFailure(errmsg, code, full_result)\n\u001b[32m--> \u001b[39m\u001b[32m131\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m BulkWriteError(full_result)\n",
+      "\u001b[31mBulkWriteError\u001b[39m: batch op errors occurred, full error: {'writeErrors': [{'index': 2, 'code': 11000, 'errmsg': 'E11000 duplicate key error collection: universidad.estudiantes index: _id_ dup key: { _id: 1 }', 'keyPattern': {'_id': 1}, 'keyValue': {'_id': 1}, 'op': {'_id': 1, 'nombre': 'Duplicado'}}], 'writeConcernErrors': [], 'nInserted': 3, 'nUpserted': 0, 'nMatched': 0, 'nModified': 0, 'nRemoved': 0, 'upserted': []}"
+     ]
+    }
+   ],
+   "source": [
+    "from pymongo.errors import DuplicateKeyError, BulkWriteError\n",
+    "\n",
+    "# Ejemplo 1: Error por _id duplicado\n",
+    "try:\n",
+    "    estudiantes.insert_one({\"_id\": \"EST001\", \"nombre\": \"Carlos\"})\n",
+    "    estudiantes.insert_one({\"_id\": \"EST001\", \"nombre\": \"Ana\"})  # Error\n",
+    "except DuplicateKeyError as e:\n",
+    "    print(f\"Error: El _id ya existe - {e}\")\n",
+    "\n",
+    "# Ejemplo 2: Inserción masiva con manejo de errores\n",
+    "documentos = [\n",
+    "    {\"_id\": 1, \"nombre\": \"Usuario1\"},\n",
+    "    {\"_id\": 2, \"nombre\": \"Usuario2\"},\n",
+    "    {\"_id\": 1, \"nombre\": \"Duplicado\"},  # Este fallará\n",
+    "    {\"_id\": 3, \"nombre\": \"Usuario3\"}\n",
+    "]\n",
+    "\n",
+    "try:\n",
+    "    # ordered=False permite continuar después de un error\n",
+    "    resultado = estudiantes.insert_many(documentos, ordered=False)\n",
+    "except BulkWriteError as e:\n",
+    "    print(f\"Algunos documentos no se insertaron: {e}\")\n",
+    "    print(f\"Insertados exitosamente: {e.details['nInserted']}\")\n",
+    "\n",
+    "# Ejemplo 3: Validación antes de insertar\n",
+    "def insertar_estudiante(nombre, email, edad):\n",
+    "    # Validaciones básicas\n",
+    "    if not nombre or len(nombre) < 2:\n",
+    "        return {\"error\": \"Nombre inválido\"}\n",
+    "    \n",
+    "    if not email or \"@\" not in email:\n",
+    "        return {\"error\": \"Email inválido\"}\n",
+    "    \n",
+    "    if edad < 16 or edad > 100:\n",
+    "        return {\"error\": \"Edad fuera de rango\"}\n",
+    "    \n",
+    "    # Verificar email duplicado\n",
+    "    if estudiantes.find_one({\"email\": email}):\n",
+    "        return {\"error\": \"Email ya registrado\"}\n",
+    "    \n",
+    "    try:\n",
+    "        resultado = estudiantes.insert_one({\n",
+    "            \"nombre\": nombre,\n",
+    "            \"email\": email,\n",
+    "            \"edad\": edad,\n",
+    "            \"fecha_registro\": datetime.now()\n",
+    "        })\n",
+    "        return {\"success\": True, \"id\": resultado.inserted_id}\n",
+    "    except Exception as e:\n",
+    "        return {\"error\": str(e)}\n",
+    "\n",
+    "# Uso\n",
+    "print(insertar_estudiante(\"María\", \"maria@example.com\", 22))"
    ]
   }
  ],
