Reparado mongo cluster

--- a/Sistemas_de_Big Data/Unidad4_NoSQL/mongodb/02_mongo_cluster/02.md
+++ b/Sistemas_de_Big Data/Unidad4_NoSQL/mongodb/02_mongo_cluster/02.md
@@ -2,7 +2,7 @@
 
 ### **2.1. Replica Sets: Alta disponibilidad y redundancia**
 
-Un Replica Set es el mecanismo fundamental que MongoDB utiliza para proporcionar alta disponibilidad y redundancia de datos. Este concepto es esencial para cualquier sistema en producción, ya que garantiza que nuestra base de datos pueda seguir funcionando incluso cuando uno o más servidores fallen. [mongodb](https://www.mongodb.com/docs/v2.6/administration/)
+Un Replica Set es el mecanismo fundamental que MongoDB utiliza para proporcionar alta disponibilidad y redundancia de datos. Este concepto es esencial para cualquier sistema en producción, ya que garantiza que nuestra base de datos pueda seguir funcionando incluso cuando uno o más servidores fallen.
 
 Un Replica Set está compuesto por un mínimo de tres nodos, aunque en producción es común encontrar configuraciones de 5, 7 o más nodos según los requisitos de disponibilidad y distribución geográfica. De estos nodos, uno actúa como **primario (PRIMARY)** y los demás como **secundarios (SECONDARY)**. El nodo primario es el único que acepta operaciones de escritura, mientras que los secundarios replican continuamente los datos del primario para mantener copias exactas.
 
@@ -52,9 +52,9 @@ En este ejemplo, hemos configurado `mongo1` con una prioridad mayor (2), lo que 
 
 ```javascript
 cfg = rs.conf()
-cfg.members [geeksforgeeks](https://www.geeksforgeeks.org/mongodb/convert-a-replica-set-to-a-sharded-cluster-in-mongodb/).priority = 0
-cfg.members [geeksforgeeks](https://www.geeksforgeeks.org/mongodb/convert-a-replica-set-to-a-sharded-cluster-in-mongodb/).hidden = true
-cfg.members [geeksforgeeks](https://www.geeksforgeeks.org/mongodb/convert-a-replica-set-to-a-sharded-cluster-in-mongodb/).slaveDelay = 3600  // 1 hora de retraso
+cfg.members[2].priority = 0
+cfg.members[2].hidden = true
+cfg.members[2].slaveDelay = 3600  // 1 hora de retraso
 rs.reconfig(cfg)
 ```
 
@@ -62,7 +62,7 @@ Este nodo mantendrá los datos con una hora de retraso, permitiéndonos recupera
 
 ### **2.2. Sharding: Escalado horizontal**
 
-El sharding es la técnica que MongoDB utiliza para distribuir datos horizontalmente entre múltiples máquinas. Mientras que un Replica Set proporciona redundancia y disponibilidad, el sharding proporciona capacidad de procesamiento y almacenamiento prácticamente ilimitada al dividir los datos en fragmentos (shards) que se distribuyen entre diferentes servidores. [geeksforgeeks](https://www.geeksforgeeks.org/mongodb/convert-a-replica-set-to-a-sharded-cluster-in-mongodb/)
+El sharding es la técnica que MongoDB utiliza para distribuir datos horizontalmente entre múltiples máquinas. Mientras que un Replica Set proporciona redundancia y disponibilidad, el sharding proporciona capacidad de procesamiento y almacenamiento prácticamente ilimitada al dividir los datos en fragmentos (shards) que se distribuyen entre diferentes servidores.
 
 El concepto fundamental del sharding es la **shard key** (clave de fragmentación), que determina cómo se distribuyen los documentos entre los diferentes shards. MongoDB divide el rango de valores de la shard key en **chunks** (fragmentos lógicos), cada uno con un tamaño máximo de 64MB por defecto. Estos chunks se distribuyen entre los shards disponibles, y el **balanceador** se encarga de mover chunks automáticamente cuando detecta que un shard tiene significativamente más datos que otros.
 
@@ -115,14 +115,14 @@ Esta estrategia distribuye los datos primero por ubicación y luego por fecha de
 
 El **escalado vertical (scale-up)** consiste en añadir más recursos (CPU, RAM, almacenamiento más rápido) a un servidor existente. Por ejemplo, pasar de un servidor con 16GB de RAM a uno con 64GB, o añadir más núcleos de CPU. Esta estrategia tiene límites físicos y económicos evidentes: existe un máximo de recursos que se pueden añadir a una única máquina, y el coste crece exponencialmente a medida que nos acercamos al hardware de gama más alta.
 
-El **escalado horizontal (scale-out)** consiste en añadir más servidores al sistema, distribuyendo la carga entre ellos. En lugar de un servidor potente, tenemos muchos servidores de capacidad media trabajando en conjunto. MongoDB está diseñado específicamente para este modelo mediante sharding. [geeksforgeeks](https://www.geeksforgeeks.org/mongodb/convert-a-replica-set-to-a-sharded-cluster-in-mongodb/)
+El **escalado horizontal (scale-out)** consiste en añadir más servidores al sistema, distribuyendo la carga entre ellos. En lugar de un servidor potente, tenemos muchos servidores de capacidad media trabajando en conjunto. MongoDB está diseñado específicamente para este modelo mediante sharding.
 
 **Comparativa práctica:**
 
 | Aspecto | Escalado Vertical | Escalado Horizontal |
 |---------|-------------------|---------------------|
 | Límite de capacidad | Limitado por hardware disponible | Prácticamente ilimitado |
-| Coste | Crecimiento exponencial | Crecimiento lineal  [geeksforgeeks](https://www.geeksforgeeks.org/mongodb/convert-a-replica-set-to-a-sharded-cluster-in-mongodb/) |
+| Coste | Crecimiento exponencial | Crecimiento lineal |
 | Disponibilidad | Punto único de fallo | Alta disponibilidad nativa |
 | Complejidad | Baja (un solo servidor) | Alta (coordinación distribuida) |
 | Latencia de red | No aplicable | Posible overhead de red |
@@ -138,7 +138,7 @@ Supongamos que tenemos una aplicación de e-commerce con 100,000 productos y 1 m
 
 ### **2.4. Config Servers y mongos (query routers)**
 
-En una arquitectura con sharding, dos componentes adicionales son esenciales: los **Config Servers** y los **mongos** (routers de consultas). [mongodb](https://www.mongodb.com/docs/manual/reference/command/nav-administration/)
+En una arquitectura con sharding, dos componentes adicionales son esenciales: los **Config Servers** y los **mongos** (routers de consultas).
 
 **Config Servers** son un Replica Set especial que almacena todos los metadatos del cluster. Estos metadatos incluyen:
 
@@ -219,4 +219,3 @@ mongos --configdb configRS/config1.ejemplo.com:27019,config2.ejemplo.com:27019,c
 Las aplicaciones se conectan a mongos exactamente como se conectarían a un mongod standalone o a un Replica Set. La distribución y el sharding son completamente transparentes para el código de la aplicación, que simplemente ejecuta consultas normales sin necesidad de saber en qué shard están los datos.
 
 Esta arquitectura distribuida, aunque compleja, proporciona la base para sistemas MongoDB que pueden escalar a petabytes de datos y millones de operaciones por segundo, manteniendo alta disponibilidad y rendimiento consistente. El administrador debe comprender estos componentes y cómo interactúan para diseñar y mantener clusters robustos.
-
